# coindrip-protocol-sc

./: .gitignore  Cargo.toml  README.md  elastic_query.json  erdpy-dev.json  erdpy-live.json  erdpy.json
mandos/: empty.scen.json
meta/: Cargo.toml
meta/src/: main.rs
src/: coindrip-protocol.rs  empty.rs  errors.rs  events.rs  lib.rs  storage.rs
tests/: coindrip_protocol_test.rs  contract_setup.rs  empty_rust_test.rs
wasm/: Cargo.toml
wasm/src/: lib.rs
