[package]
name = "coindrip"
version = "1.0.0-beta"
authors = [ "Razvan Statescu",]
edition = "2018"
publish = false

[lib]
path = "src/coindrip-protocol.rs"

[dev-dependencies]
num-bigint = "0.4.2"

[dependencies.multiversx-sc]
version = "0.39.2"

[dev-dependencies.multiversx-sc-scenario]
version = "0.39.2"
